--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Annie</title>
 </head>
 <body>
-    <h1>Annie's Site</h1>
+    <h1>Annie Golladay</h1>
+    <img src="images/1akdbeach_img.jpg" alt="Annie and family">
 </body>
 </html>
