Adding to html page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Annie</title>
 </head>
 <body>
-    <h1>Annie Golladay</h1>
-    <img src="images/1akdbeach_img.jpg" alt="Annie and family">
+    <header>
+        <h1>Annie Golladay</h1>
+        <nav class="nav-bar">
+            <a href="index.html" class="home">Home</a>
+            <a href="about.html" class="about">About</a>
+            <a href="contact.html" class="contact">Contact</a>
+        </nav>
+        <img class="profile image-class" src="images/1akdbeach_img.jpg" alt="Annie and family">
+    </header>
+    <section class="bio-container">
+        <h1>Bio</h1>
+        <p>Hi! My name is Annie, and I am currently living in Utah with my husband, Kenny, and our dog, Daisy. We are pregnant with our first baby girl due in November. I am going to school full time to become a web developer. Web development is something that I recently got introduced with and is becoming a passion of mine. I am very excited about all of the new opportunities in this field and am looking forward to the future. My dream is to become a great software engineer, and I'm excited to share my journey.</p>
+    </section>
+    <section class="favorites-container">
+        <h1>Favorites</h1>
+        <div class="movies fave-container">
+            <h2>Movies</h2>
+            <ul>
+                <li>Harry Potter series</li>
+                <li>Tolkien series</li>
+                <li>Fast and Furious series</li>
+                <li>Jane Austen series</li>
+            </ul>
+        </div>
+        <div class="books fave-container">
+            <h2>Books</h2>
+            <ul>
+                <li>Jane Austen series</li>
+                <li>Harry Potter series</li>
+                <li>Historical fiction</li>
+            </ul>
+        </div>
+        <div class="food fave-container">
+            <h2>Food</h2>
+            <ul>
+                <li>fajitas, chips and salsa</li>
+                <li>pizza</li>
+                <li>Indian food</li>
+                <li>popcorn and ice cream</li>
+            </ul>
+        </div>
+    </section>
+    <script src="index.js"></script>
 </body>
 </html>
