fixing more errors

--- a/index.html
+++ b/index.html
@@ -23,31 +23,47 @@
     </section>
     <section class="favorites-container">
         <h2>Favorites</h2>
-        <div class="movies fave-container">
-            <h3>Movies</h3>
-            <ul>
-                <li>Harry Potter series</li>
-                <li>Tolkien series</li>
-                <li>Fast and Furious series</li>
-                <li>Jane Austen series</li>
-            </ul>
-        </div>
-        <div class="books fave-container">
-            <h3>Books</h3>
-            <ul>
-                <li>Jane Austen series</li>
-                <li>Harry Potter series</li>
-                <li>Historical fiction</li>
-            </ul>
-        </div>
-        <div class="food fave-container">
-            <h3>Food</h3>
-            <ul>
-                <li>fajitas, chips and salsa</li>
-                <li>pizza</li>
-                <li>Indian food</li>
-                <li>popcorn and ice cream</li>
-            </ul>
+        <div class="favorites-wrapper">
+            <div class="movies fave-container">
+                <h3>Movies</h3>
+                <ul>
+                    <li>Harry Potter series</li>
+                    <li>Tolkien series</li>
+                    <li>Fast and Furious series</li>
+                    <li>Jane Austen series</li>
+                </ul>
+                <img src="images/prideprejudice.jpeg" alt="Pride and Prejuice">
+            </div>
+            <div class="books fave-container">
+                <h3>Books</h3>
+                <ul>
+                    <li>Jane Austen series</li>
+                    <li>Harry Potter series</li>
+                    <li>Historical fiction</li>
+                </ul>
+                <img src="images/harrypotter.jpeg" alt="Harry Potter">
+            </div>
+            <div class="travel fave-container">
+                <h3>Travel</h3>
+                <ul>
+                    <li>Florida</li>
+                    <li>Hawaii</li>
+                    <li>Italy</li>
+                    <li>Ireland</li>
+                    <li>Scotland</li>
+                </ul>
+                <img src="images/hawaii.jpeg" alt="Hawaii">
+            </div>
+            <div class="food fave-container">
+                <h3>Food</h3>
+                <ul>
+                    <li>fajitas, chips and salsa</li>
+                    <li>pizza</li>
+                    <li>Indian food</li>
+                    <li>popcorn and ice cream</li>
+                </ul>
+                <img src="images/mexicanfood.jpeg" alt="Mexican food">
+            </div>
         </div>
     </section>
     <script src="index.js"></script>
