--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/styles">
     <title>Annie</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
             <a href="about.html" class="about">About</a>
             <a href="contact.html" class="contact">Contact</a>
         </nav>
-        <img class="profile image-class" src="images/1akdbeach_img.jpg" alt="Annie and family">
+        <img class="profile image-class" src="/pictures/1akdbeach_img.jpg" alt="Annie and family">
     </header>
     <section class="bio-container">
         <h2>Bio</h2>
@@ -32,7 +32,7 @@
                     <li>Fast and Furious series</li>
                     <li>Jane Austen series</li>
                 </ul>
-                <img src="images/prideprejudice.jpeg" alt="Pride and Prejuice">
+                <img src="/pictures/prideprejudice.jpeg" alt="Pride and Prejuice">
             </div>
             <div class="books fave-container">
                 <h3>Books</h3>
@@ -41,7 +41,7 @@
                     <li>Harry Potter series</li>
                     <li>Historical fiction</li>
                 </ul>
-                <img src="images/harrypotter.jpeg" alt="Harry Potter">
+                <img src="/pictures/harrypotter.jpeg" alt="Harry Potter">
             </div>
             <div class="travel fave-container">
                 <h3>Travel</h3>
@@ -52,7 +52,7 @@
                     <li>Ireland</li>
                     <li>Scotland</li>
                 </ul>
-                <img src="images/hawaii.jpeg" alt="Hawaii">
+                <img src="/pictures/hawaii.jpeg" alt="Hawaii">
             </div>
             <div class="food fave-container">
                 <h3>Food</h3>
@@ -62,10 +62,10 @@
                     <li>Indian food</li>
                     <li>popcorn and ice cream</li>
                 </ul>
-                <img src="images/mexicanfood.jpeg" alt="Mexican food">
+                <img src="/pictures/mexicanfood.jpeg" alt="Mexican food">
             </div>
         </div>
     </section>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
 </body>
 </html>
